tests/baselines/reference/parserGreaterThanTokenAmbiguity2.errors.txt
parserGreaterThanTokenAmbiguity2.ts(1,1): error TS2365: Operator '>' cannot be applied to types 'boolean' and 'number'.
parserGreaterThanTokenAmbiguity2.ts(1,5): error TS1109: Expression expected.


==== parserGreaterThanTokenAmbiguity2.ts (2 errors) ====
    1 > > 2;
    ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and 'number'.
        ~
!!! error TS1109: Expression expected.